src/objects/External_Spend_Request__c.object
<CustomObject>
    <description>Project Advance - External Spend Request</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>External Spend Requests</relationshipLabel>
        <relationshipName>External_Spend_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Apttus Agreement</inlineHelpText>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>External Spend Requests</relationshipLabel>
        <relationshipName>External_Spend_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ariba_Commodity_Code__c</fullName>
        <label>Ariba Commodity Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Owner__c</fullName>
        <label>Budget Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Function__c</fullName>
        <inlineHelpText>What Business Function is the owner of this request?</inlineHelpText>
        <label>Business Function</label>
        <picklist>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Devices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commodity_Type__c</fullName>
        <inlineHelpText>What do you want to buy?</inlineHelpText>
        <label>Commodity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering Computers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tooling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Comments__c</fullName>
        <label>Contract Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <description>Contract Start Date</description>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <label>Contract Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Business Pre-Approval</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Approved: Negotiation in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Summary Approvals In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Pending Final Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for PR Creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PO Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Convert_this_to_master_agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you want to convert this external spend request into a master Apttus agreement? If you check this, don&apos;t select a master agreement.</inlineHelpText>
        <label>Convert this to a master agreement?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cross_Border__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are you charging a cost center outside of your country?</inlineHelpText>
        <label>Cross Border?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Cancelled__c</fullName>
        <label>Date Cancelled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Contract_Pending_Final_Signature__c</fullName>
        <label>Date Contract Pending Final Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Executive_Summary__c</fullName>
        <label>Date Executive Summary</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_On_Hold__c</fullName>
        <label>Date On Hold</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Pre_Approved__c</fullName>
        <label>Date Pre Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted_for_PR_Creation__c</fullName>
        <label>Date Submitted for PR Creation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Description__c</fullName>
        <label>Deal Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deal_Justification__c</fullName>
        <inlineHelpText>What is the impact if this request is not approved?</inlineHelpText>
        <label>Deal Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESR_Link__c</fullName>
        <formula>&apos;https://mobility.my.salesforce.com/&apos; &amp;  Id</formula>
        <inlineHelpText>Link for ESR report</inlineHelpText>
        <label>ESR Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Purchase_Order_Number__c</fullName>
        <label>Existing Purchase Order Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extension_or_change_order_to_a_contract__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this an extension or change order to an existing contract?</inlineHelpText>
        <label>Extension or change order to a contract?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Generate_ESR_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Triggers a work flow &quot;Notification for Pre-Approved: Negotiation in Progress&quot; when value is set to True.</description>
        <label>Generate ESR Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Managed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Will this purchase be managed by IT or impact IT systems/integrations?</inlineHelpText>
        <label>IT Managed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_this_related_to_a_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is this related to a Project?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>External Spend Requests (Master Agreement)</relationshipLabel>
        <relationshipName>External_Spend_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Master_Supplier_Name__c</fullName>
        <label>Master Supplier Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_Commitment__c</fullName>
        <label>Minimum Commitment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mot_Signature__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does the supplier require a handwritten ink or electronic signature on the document?</inlineHelpText>
        <label>Mot Signature?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Of_Cost_Records_From_Portal__c</fullName>
        <description>This field will be updated by the interface. This field will be used in a workflow rule to send out email notification.</description>
        <label>Number Of Cost Records From Portal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Cost_Records_From_SFDC__c</fullName>
        <description>Count of cost records</description>
        <label>Number Of Cost Records From SFDC</label>
        <summaryForeignKey>External_Spend_Request_Cost__c.External_Spend_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Offsite_Service_Resource_Count__c</fullName>
        <inlineHelpText>Number of offsite resources</inlineHelpText>
        <label>Offsite Service Resource Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Onsite_Service_Resource_Count__c</fullName>
        <inlineHelpText>Number of onsite resources</inlineHelpText>
        <label>Onsite Service Resource Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Approval_Comments__c</fullName>
        <label>Pre-Approval Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <description>Related Project #</description>
        <inlineHelpText>What is the Related Project ID?</inlineHelpText>
        <label>Project ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Type__c</fullName>
        <label>Purchase Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Order</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RFX_Business_Owner__c</fullName>
        <label>RFX Business Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFX_Date__c</fullName>
        <label>RFX Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFX_Description__c</fullName>
        <label>RFX Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFX_Estimated_Annual_Cost__c</fullName>
        <label>RFX Estimated Annual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RFX_Procurement_Owner__c</fullName>
        <label>RFX Procurement Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFX_Status__c</fullName>
        <label>RFX Status</label>
        <picklist>
            <picklistValues>
                <fullName>RFX Prep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request for Proposal (RFP) In Progess</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request for Quote (RFQ) in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request for Information (RFI) in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFX On-Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFX Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RFX_Suppliers__c</fullName>
        <label>RFX Suppliers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFX_Target_Completion_Date__c</fullName>
        <label>RFX Target Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requester_Commerce_ID__c</fullName>
        <inlineHelpText>Commerce ID of the requester.</inlineHelpText>
        <label>Requester Commerce ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Name__c</fullName>
        <label>Requester&apos;s Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestors_Email__c</fullName>
        <description>Email address of the ESR requestor. This field is updated by a workflow rule</description>
        <label>Requestor&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Service_Contract_Type__c</fullName>
        <label>Service Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time &amp; Material</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Labor_Contract_Country__c</fullName>
        <inlineHelpText>In which country will this resource be located?</inlineHelpText>
        <label>Service Labor Contract Country</label>
        <picklist>
            <picklistValues>
                <fullName>Ask Geoff</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Software_Delivery_Type__c</fullName>
        <inlineHelpText>How will these software goods and services be delivered?</inlineHelpText>
        <label>Software Delivery Type</label>
        <picklist>
            <picklistValues>
                <fullName>Electronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Media</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Software_Ship_Location__c</fullName>
        <inlineHelpText>Where will these goods be shipped?</inlineHelpText>
        <label>Software Ship Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Commodity_Type__c</fullName>
        <label>Sub-Commodity Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitter_Name__c</fullName>
        <inlineHelpText>The person submitting ESR from the Google App Engine.</inlineHelpText>
        <label>Submitter&apos;s Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitters_Email__c</fullName>
        <description>Updated by a workflow rule</description>
        <label>Submitter&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Suggested_Supplier__c</fullName>
        <inlineHelpText>What supplier would you like to use?</inlineHelpText>
        <label>Suggested Supplier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Justification__c</fullName>
        <inlineHelpText>Why are the suppliers listed unable to meet your needs?</inlineHelpText>
        <label>Supplier Justification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Plan_Spend__c</fullName>
        <label>Supplier Plan Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Supplier_Relationship_Status__c</fullName>
        <label>Supplier Relationship Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <inlineHelpText>Request Title</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Capital_Amount__c</fullName>
        <description>Sum of Capital Costs</description>
        <inlineHelpText>Sum of Capital Costs</inlineHelpText>
        <label>Total Capital Amount</label>
        <summarizedField>External_Spend_Request_Cost__c.Capital_Amount__c</summarizedField>
        <summaryForeignKey>External_Spend_Request_Cost__c.External_Spend_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <label>Total Cost</label>
        <summarizedField>External_Spend_Request_Cost__c.Total_Cost__c</summarizedField>
        <summaryForeignKey>External_Spend_Request_Cost__c.External_Spend_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Depreciation_Expense_Amount__c</fullName>
        <description>Sum of Depreciation Expense&apos;s from the ESR Cost Allocation object</description>
        <inlineHelpText>Sum of Depreciation Expense&apos;s from the ESR Cost Allocations</inlineHelpText>
        <label>Total Depreciation Expense Amount</label>
        <summarizedField>External_Spend_Request_Cost_Allocation__c.Allocation_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>External_Spend_Request_Cost_Allocation__c.Allocation_Type__c</field>
            <operation>equals</operation>
            <value>Depreciation</value>
        </summaryFilterItems>
        <summaryForeignKey>External_Spend_Request_Cost_Allocation__c.External_Spend_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Expense_Amount__c</fullName>
        <description>Sum of Expense Costs</description>
        <label>Total Expense Amount</label>
        <summarizedField>External_Spend_Request_Cost__c.Expense_Amount__c</summarizedField>
        <summaryForeignKey>External_Spend_Request_Cost__c.External_Spend_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Non_Labor_Expense_Amount__c</fullName>
        <description>Sum of non-labor costs</description>
        <label>Total Non Labor Expense Amount</label>
        <summarizedField>External_Spend_Request_Cost__c.Non_Labor_Expense_Amount__c</summarizedField>
        <summaryForeignKey>External_Spend_Request_Cost__c.External_Spend_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>External Spend Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Requester_Commerce_ID__c</columns>
        <columns>Account__c</columns>
        <columns>Commodity_Type__c</columns>
        <columns>Sub_Commodity_Type__c</columns>
        <columns>Business_Function__c</columns>
        <columns>Agreement__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Engineering_ESRs</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Commodity_Type__c</columns>
        <columns>Sub_Commodity_Type__c</columns>
        <columns>Agreement__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Function__c</field>
            <operation>equals</operation>
            <value>Engineering</value>
        </filters>
        <label>Engineering ESRs</label>
        <sharedTo>
            <group>External_Spend_Request_Engineering_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance_ESRs</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Commodity_Type__c</columns>
        <columns>Sub_Commodity_Type__c</columns>
        <columns>Agreement__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Function__c</field>
            <operation>equals</operation>
            <value>Finance</value>
        </filters>
        <label>Finance ESRs</label>
        <sharedTo>
            <group>External_Spend_Request_Finance_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HR_ESRs</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Commodity_Type__c</columns>
        <columns>Sub_Commodity_Type__c</columns>
        <columns>Agreement__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Function__c</field>
            <operation>equals</operation>
            <value>HR</value>
        </filters>
        <label>HR ESRs</label>
        <sharedTo>
            <group>External_Spend_Request_HR_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IT_ESRs</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Commodity_Type__c</columns>
        <columns>Sub_Commodity_Type__c</columns>
        <columns>Contract_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Agreement__c</columns>
        <columns>Requestors_Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Function__c</field>
            <operation>equals</operation>
            <value>IT</value>
        </filters>
        <label>IT ESRs</label>
        <sharedTo>
            <group>External_Spend_Request_CIO</group>
            <group>External_Spend_Request_IT_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Legal_ESRs</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Commodity_Type__c</columns>
        <columns>Sub_Commodity_Type__c</columns>
        <columns>Agreement__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Function__c</field>
            <operation>equals</operation>
            <value>Legal</value>
        </filters>
        <label>Legal ESRs</label>
        <sharedTo>
            <group>External_Spend_Request_Legal_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Marketing_ESRs</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Commodity_Type__c</columns>
        <columns>Sub_Commodity_Type__c</columns>
        <columns>Agreement__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Function__c</field>
            <operation>equals</operation>
            <value>Marketing</value>
        </filters>
        <label>Marketing ESRs</label>
        <sharedTo>
            <group>External_Spend_Request_Marketing_Group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>ESR #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Spend Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Cannot_Edit_ESR_After_Conversion</fullName>
        <active>false</active>
        <description>ESRs cannot be edited after they have been converted to agreements. The contract status and the total cost can change.</description>
        <errorConditionFormula>AND(
  NOT( 
    OR (ISCHANGED( Total_Cost__c ), 
        ISCHANGED( Contract_Status__c ),
        ISCHANGED(  Total_Depreciation_Expense_Amount__c),
        ISCHANGED(   Total_Capital_Amount__c ),
        ISCHANGED(   Total_Expense_Amount__c ),
        ISCHANGED(   Total_Non_Labor_Expense_Amount__c )
       )
    ), 
  NOT(
    ISBLANK(PRIORVALUE(Agreement__c ))
    )
  )</errorConditionFormula>
        <errorMessage>An agreement has been generated from this ESR and you are NOT allowed to make changes to the ESR.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_eGVM</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Account__r.Name = &apos;No eGVM Needed&apos;,  ISPICKVAL(Contract_Status__c, &apos;Pre-Approved: Negotiation in Progress&apos;))</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>Account must be specified other than &quot;	
No eGVM Needed&quot;</errorMessage>
    </validationRules>
</CustomObject>